give a button-like outline to the link at the top

--- a/style.css
+++ b/style.css
@@ -94,6 +94,12 @@ a:hover {
   margin-bottom: 48px;
 }
 
+.top-link {
+  padding: .5em .75em;
+  border: 2px solid;
+  border-radius: 3px;
+}
+
 h1 {
   line-height: 64px;
   margin-bottom: 16px;
