add maximum column width + borders to one-column layout

--- a/style.css
+++ b/style.css
@@ -64,6 +64,9 @@
   --v-space: calc(1rem + (3 * var(--unit)));
   --col-width: calc(90 * var(--unit));
   --col-gap: calc(10 * var(--unit));
+
+  --left-edge: 0;
+  --right-edge: 100vw;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -79,9 +82,19 @@
   }
 }
 
+@media (min-width: 500px) {
+  :root {
+    --col-width: 450px;
+    --left-edge: calc(50% - 250px);
+    --right-edge: calc(50% + 250px);
+  }
+}
+
 @media (min-width: 720px) {
   :root {
     --col-width: calc(40 * var(--unit));
+    --left-edge: calc(50% - 500px);
+    --right-edge: calc(50% + 500px);
   }
 }
 
@@ -90,7 +103,7 @@ body {
   font-size: 16px;
   color: var(--main-text);
   background-color: var(--background);
-  background: linear-gradient(to right, var(--background-accent) 0 calc(50% - 500px), var(--background) 0 calc(50% + 500px), var(--background-accent) 0);
+  background: linear-gradient(to right, var(--background-accent) 0 var(--left-edge), var(--background) 0 var(--right-edge), var(--background-accent) 0);
 
   min-width: 320px;
   max-width: 1000px;
