use the max col-width for the donation text, not current col-width

--- a/style.css
+++ b/style.css
@@ -255,7 +255,7 @@ code {
 .donation {
   color: var(--orange);
   text-align: center;
-  max-width: var(--col-width);
+  max-width: 450px;
 }
 
 .showcase-title {
