--- a/style.css
+++ b/style.css
@@ -113,7 +113,7 @@ body {
 .headline {
   display: flow-root;
 
-  font-size: calc(1rem + (.5 * var(--v-unit)));
+  font-size: calc(1.2rem + (.2 * var(--v-unit)));
   color: var(--orange);
   text-align: center;
 
@@ -121,11 +121,10 @@ body {
 }
 
 .headline h1 {
-  font-size: calc(2rem + (6.5 * var(--v-unit)));
   font-weight: normal;
-  line-height: calc(1.3rem + (4.5 * var(--v-unit)));
-
-  margin-bottom: calc(0.5rem + (2 * var(--v-unit)));
+  font-size: calc(3rem + (5 * var(--v-unit)));
+  margin-block-start: var(--v-space);
+  margin-block-end: 0;
 }
 
 .grid {
